book suggestion app

--- a/app/public/thanks.html
+++ b/app/public/thanks.html
@@ -14,3 +14,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
+<body>
+	<div class="container">
+		<h3>Thanks for saving your information!</h3>
+		<a href="/login">Click here to access your selections</a>
+	</div>
+</body>
