--- a/app/public/thanks.html
+++ b/app/public/thanks.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title><%= pageTitle %></title>
+  <title>Thank You</title>
   <meta name="description" content="A recommendation engine to help parents of children ages 0 to 5 discover new books their kids will love">
   <meta name="Erin Witmer" content="Thinkful capstone project">
 
