--- a/app/public/user.html
+++ b/app/public/user.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Good bye</title>
+  <title>Please log in</title>
   <meta name="description" content="A recommendation engine to help parents of children ages 0 to 5 discover new books their kids will love">
   <meta name="Erin Witmer" content="Thinkful capstone project">
 
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<div class="container">
-		<h3>Sorry to see you go!</h3>
-		<a href="/">Click here to return to the homepage</a>
+		<h3>Looks like you are already registered!</h3>
+		<a href="/login">Click here to access your previous selections</a>
 	</div>
 </body>
